[metadata]
name = itksn
version = 0.0.2
description = ITk Serial Number parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kratsg/itksn
author = Giordon Stark
author_email = gstark@cern.ch
license = BSD 3-Clause
license_file = LICENSE
keywords = hep utilities physics itk
project_urls =
    Documentation = https://kratsg.github.io/itksn/
    Source = https://github.com/kratsg/itksn
    Tracker = https://github.com/kratsg/itksn/issues
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[bdist_wheel]
universal = 1

[options]
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    click>=6.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    itksn = itksn.cli:cli

[build_sphinx]
project = itksn
source-dir = docs
build-dir = docs/_build
all-files = 1
warning-is-error = 1
